regression/parse_pool/progtest13.sfp.out

sfc in program parse_pool/progtest13.sfp
syntax error at line 5, position 28:
from any goto foo when bar nor bar
                           ^
